Server: Verwende für die DB-Prüfungen keine Virtual Threads